@@ -6,6 +6,7 @@ Changelog for logilab database package
     * fix backup/restore commands for sqlite backend (closes: #69607)
     * fix checking of maximum number of function (closes: #71413)
     * support for COUNT(DISTINCT ...) (closes: #71414)
+    * sqlite has no boolean type, should use 0 and 1
 
 2011-06-09  --  1.6.0
     * new CAST function
